# fi-parliament-tools

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  LICENSE.rst  README.md  README.rst  mypy.ini  noxfile.py  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  index.rst  reference.md  reference.rst  requirements.txt  usage.md  usage.rst
recipes/: 01_download_data.sh  02_preprocess_text.sh  03_split_ctm_by_session.sh  04_postprocess_ctms.sh  05_create_final_kaldi_files.sh  06_cut_audio_and_text.sh  check_audio_lengths.sh  create_final_kaldi_files.sh  parl_to_kaldi_text.py  play_video_from_uttid.sh  sample_segments.sh  split_files_by_session.sh  swedish_words.txt  sync_from_remote.sh  sync_to_remote.sh  words_elative.txt
src/fi_parliament_tools/: __init__.py  __main__.py  config.toml  config_sample.toml  downloads.py  mptable.py  pipeline.py  postprocessing.py  preprocessing.py  video_query.py
src/fi_parliament_tools/parsing/: __init__.py  data_structures.py  documents.py  query.py
src/fi_parliament_tools/segmentFiltering/: IO.py  labeler.py
src/fi_parliament_tools/speakerAligner/: IO.py  match.py
src/fi_parliament_tools/transcriptMatcher/: IO.py  __init__.py  labeler.py
src/fi_parliament_tools/transcriptParser/: data_structures.py  documents.py  query.py
tests/: __init__.py  conftest.py  test_IO.py  test_data_structures.py  test_documents.py  test_downloads.py  test_interpellation.py  test_labeler.py  test_main.py  test_match.py  test_mptable.py  test_preprocessing.py  test_query.py  test_video_query.py
tests/data/: __init__.py  faulty_recipe.py  interpellation_4_2017_text.txt  long_statement_strings.py  simple_recipe.py  transcript_query.py  transcripts_for_preprocessing_tests.list
tests/data/ctms/: custom_test.ctm_edits.segmented  session-019-2016.ctm_edits.segmented  session-019-2016.segments  session-019-2016.text  session-061-2020_ctm_edits.segmented  session-071-2017.segments  session-071-2017.text  session-071-2017_ctm_edits.segmented  session-129-2016_ctm_edits.segmented
tests/data/jsons/: preprocessing_test_sample.json  session-001-2015.json  session-007-2020.json  session-007-2020.json.updated  session-007-2020.text  session-019-2016.json  session-019-2016.text  session-022-2019.json  session-022-2019.text  session-032-2016-4.json  session-034-2015.json  session-035-2018.json  session-035-2018.text  session-070-2017-7.json  session-085-2016-4.json  session-130-2017.json  session-130-2017.text  session-141-2017.json  video_query.json
tests/data/xmls/: ahde.xml  haatainen.xml  haavisto.xml  kilpi.xml  rehn-kivi.xml  session-001-2015.xml  session-007-2018.xml  session-007-2020.xml  session-018-2015.xml  session-019-2016.xml  session-032-2016.xml  session-034-2015.xml  session-035-2018.xml  session-040-2020.xml  session-061-2020-3.xml  session-061-2020-4.xml  session-061-2020-5.xml  session-061-2020-tos.xml  session-061-2020.xml  session-065-2017.xml  session-070-2017.xml  session-072-2019.xml  session-085-2016.xml  session-108-2018.xml  session-124-2017.xml  session-130-2017.xml  session-141-2017.xml  suomela.xml  vk-01-2015.xml  vk-04-2017.xml
tests/test_parsing/: __init__.py  test_data_structures.py  test_documents.py  test_interpellation.py  test_query.py
tests/test_segmentFiltering/: __init__.py  test_IO.py  test_io.py  test_labeler.py
