[tool.poetry]
name = "fi-parliament-tools"
version = "0.0.0-alpha"
description = "Finnish Parliament Data Tools"
authors = ["Anja Virkkunen <anja.virkkunen@aalto.fi>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/aalto-speech/fi-parliament-tools"
repository = "https://github.com/aalto-speech/fi-parliament-tools"
keywords = ["aalto", "Finnish", "parliament", "eduskunta"]

[tool.poetry.urls]
Changelog = "https://github.com/aalto-speech/fi-parliament-tools/releases"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
lxml = "^4.8.0"
alive-progress = "^2.4.1"
requests = "^2.25.1"
pandas = "^1.4.2"
aalto-asr-preprocessor = "^2022.4.27"
fasttext = "^0.9.2"
atomicwrites = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^22.3"
coverage = {extras = ["toml"], version = "^6.3"}
darglint = "^1.8.0"
flake8 = "^4.0.1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.11.29"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
mypy = "^0.930"
pep8-naming = "^0.12.1"
pre-commit = "^2.18.1"
pre-commit-hooks = "^4.2.0"
Pygments = "^2.12.0"
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
reorder-python-imports = "^3.1.0"
safety = "^1.10.3"
sphinx = "^4.5.0"
sphinx-autobuild = "^2021.3.14"
sphinx-click = "^4.0.3"
sphinx-rtd-theme = "^1.0.0"
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = "^1.0.0"}

[tool.poetry.scripts]
fi-parliament-tools = "fi_parliament_tools.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["fi_parliament_tools"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "alive_progress",
    "lxml",
    "pandas"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
