[tool.poetry]
authors = ["Anja Virkkunen <anja.virkkunen@aalto.fi>"]
description = "Finnish Parliament Data Tools"
homepage = "https://github.com/aalto-speech/fi-parliament-tools"
keywords = ["aalto", "Finnish", "parliament", "eduskunta"]
license = "MIT"
name = "fi-parliament-tools"
readme = "README.md"
repository = "https://github.com/aalto-speech/fi-parliament-tools"
version = "0.0.0-alpha"

[tool.poetry.urls]
Changelog = "https://github.com/aalto-speech/fi-parliament-tools/releases"

[tool.poetry.dependencies]
aalto-asr-preprocessor = ">=2022.4.27"
alive-progress = ">=2.4.1"
atomicwrites = ">=1.4.0"
click = ">=8.1.3"
fasttext = ">=0.9.2"
lxml = ">=4.8.0"
pandas = ">=1.4.2"
python = "^3.8"
requests = ">=2.27.1"

[tool.poetry.dev-dependencies]
Pygments = ">=2.12.0"
black = ">=22.3"
coverage = {extras = ["toml"], version = ">=6.3"}
darglint = ">=1.8.0"
flake8 = ">=4.0.1"
flake8-bandit = ">=3.0.0"
flake8-bugbear = ">=22.4.25"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2022.4.7"
isort = ">=5.10.1"
mypy = ">=0.950"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.18.1"
pre-commit-hooks = ">=4.2.0"
pytest = ">=7.1.2"
pytest-mock = ">=3.7.0"
pyupgrade = ">=2.32.1"
safety = ">=1.10.3"
sphinx = ">=4.5.0"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=4.0.3"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=1.0.0"}

[tool.poetry.scripts]
fi-parliament-tools = "fi_parliament_tools.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["fi_parliament_tools", "tests"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.isort]
force_single_line = true
lines_after_imports = 2
profile = "black"

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "alive_progress",
  "lxml",
  "pandas",
]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
  "tests",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
